--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && node ./buildCodeFile.js",
+    "build": "react-scripts build",
+    "buildCodeFile": "node ./buildCodeFile.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
