--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "buildCodeFile": "node ./buildCodeFile.js",
+    "buildCodeFile": "node --experimental-strip-types ./buildCodeFile.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -51,5 +51,6 @@
   },
   "devDependencies": {
     "prettier": "^2.8.7"
-  }
+  },
+  "type": "module"
 }
